# optimal-centroids

./: 3.1-optimal-centroids.ipynb  README.md  pyproject.toml  usage_example.ipynb
.github/workflows/: ci.yaml
optimalcentroids/: optimal_centroids.py  test_optimal_centroids.py
